# opcua

./: CMakeLists.txt  README.md
main/: SQLiteBackend.h  server.c
open62541/: open62541.c  open62541.h
